# streamlit_app

./: .env.example  .gitignore  .layout_rl_model.pkl  .windsurfrules  ABOUT.md  API_DOCUMENTATION.md  Design.md  PLANNING.md  TASK.md  api.py  app.py  app_2.py  app_old.py  app_old_good.py  authentication.py  available_space_dict.json  beam_search_beta.py  demo_visualizations.py  example_protected_api.py  firebase.py  firebase_credentials_base64.txt  fit_objects.py  generate_room.py  github_data.py  golden_ratio.ipynb  layout_ml.py  layout_preference_model.pkl  layout_rl.py  oauth_example.py  object_types.json  optimization.py  optimization_file.py  profile_bathroom_layout.py  profile_focused.py  profile_performance.py  register_user_example.py  requirements.txt  review.py  room_data.json  rules.txt  (+8 more)
algorithms/: __init__.py  available_space.py  beam_search.py  placement.py
config/: constraints.py  object_types.py
doc/: API_DOCUMENTATION.md  ARCHITECTURE.md  AUTHENTICATION_QUICK_START.md  CODE_CHANGES.md  CORNER_DIVERSITY_GUIDE.md  ENCLOSED_SPACE_DETECTION.md  ENLARGE_AND_SHIFT_GUIDE.md  FIX_LOGIN_ISSUE.md  FLUTTER_PHONE_SETUP.md  HOW_TO_REGISTER.md  INTEGRATION_SUMMARY.md  OAUTH_GUIDE.md  PERFORMANCE_GUIDE.md  QUICK_INTEGRATION_STEPS.md  README.md  REGISTRATION_SUMMARY.md  UPDATES.md  USER_API_README.md
flutter_integration_example/: README.md  auth_example.dart  bathroom_api_auth_service.dart  bathroom_api_client.dart  bathroom_layout_details_screen.dart  bathroom_layout_screen.dart  bathroom_layout_widget.dart  fix_example.dart  oauth_flutter_example.dart  welcome_back_screen_integrated.dart
logs/: README.md
model_training/: agent.py  dqn.py  (+5 more)
optimization/cpp_scoring/: .gitignore  BUILD_SUCCESS.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  __init__.py  bathroom_scoring.cpp  bathroom_scoring.h  bindings.cpp  build.bat  python_wrapper.py  requirements.txt  setup.py  test_cpp_scoring.py
(+94 files in other folders)
